--- a/Teste.css
+++ b/Teste.css
@@ -9,7 +9,7 @@
  
 **/
 /*Source AnotherEternity*/
-@import url('https://aimsomnia.github.io/Teste/source.css');
+@import url('https://raw.githubusercontent.com/aimsomnia/Teste/main/source.css');
 /*Radial status*/
 @import url('https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css');
 /*BD Addon Mini List by Disease#3749*/
